# suiteas

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  suiteas_hook.py
.github/workflows/: ci.yml  pypi-publish.yml
doc/changelog_entries/: +utf8.bugfix.rst  12.feature.rst  3.feature.rst  4.feature.rst  40.bugfix.rst  5.feature.rst  6.feature.rst  60.feature.rst  groundwork.feature.rst
doc/source/: why.rst
doc/source/dev/: index.rst  release_checklist.rst
doc/source/diagrams/: code_entities.d2  config.d2  overall.d2
doc/source/release/: index.rst  notes.rst
doc/source/release/changelog/: 98.feature.rst  changelog.rst  index.rst
src/suiteas/: __init__.py  __main__.py  config.py  domain.py
src/suiteas/core/: check.py  config.py  enforce.py  names.py  organize.py  path.py  print.py  pytest.py  rules.py  run.py  validate.py  violations.py
src/suiteas/core/read/: codebase.py  config.py  file.py  project.py  pytest_file.py  pytest_suite.py
src/suiteas/domain/: codeobj.py
src/suiteas/read/: codebase.py  config.py  file.py  project.py  pytest_collect.py  pytest_file.py  pytest_suite.py
src/suiteas_test/: codebase.py  config.py  file.py  project.py  test_file.py  test_suite.py
tests/: conftest.py
tests/assets/config_files/: bad_ignore.toml  badlists.toml  complete.toml  extra_subsection.toml  no_section.toml  superfluous.toml  syntax_err.toml
tests/assets/files/: branch_logic_func.py  invalid_syntax.py  lambda_func.py  multi.py  nested_func.py  one_class.py  test_one_class.py  test_one_class_one_func.py  test_two_classes.py  unicode_backquotes.py
tests/assets/invalid_projs/t82sedcy/: pyproject.toml
tests/assets/projects/automultipkgnamesrc/: pyproject.toml
tests/assets/projects/automultisetuptoolssrc/: pyproject.toml
tests/assets/projects/autonamesrc/: pyproject.toml
tests/assets/projects/autopkgnamesrc/: pyproject.toml
tests/assets/projects/autosetuptoolssrc/: pyproject.toml
tests/assets/projects/autosrc/: pyproject.toml
tests/assets/projects/collected_tests/: pyproject.toml
tests/assets/projects/decorated_test/: pyproject.toml
tests/assets/projects/decorated_test/tests/unit/w21ihpvi/: test_hello.py
tests/assets/projects/ignored_tests/: pyproject.toml
tests/assets/projects/ignored_tests/tests/: conftest.py
tests/assets/projects/no_tests_dir/: pyproject.toml
tests/assets/projects/no_unit_dir/: pyproject.toml
tests/assets/projects/one_func_no_test/: pyproject.toml
tests/assets/projects/one_test/tests/unit/cnmbqr9a/: test_hello.py
tests/assets/projects/paramtest/: pyproject.toml
tests/assets/projects/paramtest/tests/unit/h10mfz3s/: test_hello.py
tests/assets/projects/partially_ignored_tests/: pyproject.toml
tests/assets/projects/partially_ignored_tests/tests/: conftest.py
tests/assets/projects/partially_ignored_tests/tests/bad/: test_ignored.py
tests/assets/projects/srcconfig_only/: pyproject.toml
tests/assets/projects/trivial_pass/: pyproject.toml
tests/assets/projects/two_files/: pyproject.toml
tests/assets/projects/two_files/src/ow9xem9x/: goodbye.py  hello.py
tests/assets/projects/two_files/tests/unit/ow9xem9x/: test_goodbye.py  test_hello.py
tests/assets/projects/unitrootdir/: pyproject.toml
tests/assets/valid_projs/af8o7tt1/: pyproject.toml
tests/fixtures/: names.py  paths.py
tests/integr/: test_projs.py
tests/unit/suiteas/: test_domain.py
tests/unit/suiteas/core/: test_check.py  test_organize.py  test_path.py  test_print.py  test_run.py
tests/unit/suiteas/core/read/: test_codebase.py  test_config.py  test_file.py  test_project.py
tests/unit/suiteas/read/: test_codebase.py  test_config.py  test_file.py  test_project.py  test_pytest_collect.py  test_pytest_file.py  test_pytest_suite.py
